<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_todo"
        android:icon="@drawable/ic_agenda"
        android:title="@string/title_pengingat" />
    <item
        android:id="@+id/navigation_personal_usage"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_personal_usage" />
    <item
        android:id="@+id/navigation_member_usage"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/title_group_usage" />
    <item
        android:id="@+id/navigation_locking_phone"
        android:icon="@drawable/ic_lock_black_24dp"
        android:title="@string/title_lock_phone" />
</menu>